# nshader

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml  docs.yml  release.yml
cli/: nshader_cli.c
compiler/include/nshader/: nshader_compiler.h
docs/: _config.yml  cli.md  getting-started.md  index.md
docs/headers/: nshader_base.md  nshader_compiler.md  nshader_info.md  nshader_reader.md  nshader_sdl3_gpu.md  nshader_type.md  nshader_writer.md
format/include/nshader/: nshader_info.h  nshader_reader.h  nshader_sdl3_gpu.h  nshader_type.h
format/src/: nshader_base.c  nshader_reader.c  nshader_sdl3_gpu.c  nshader_type.c
include/: nshader.h
include/nshader/: nshader_base.h  nshader_compiler.h  nshader_info.h  nshader_sdl3_gpu.h  nshader_type.h  nshader_writer.h
src/: nshader.c  nshader_compiler.c  nshader_info.c  nshader_reader.c  nshader_sdl3_gpu.c  nshader_shadercross.c  nshader_shadercross.h  nshader_type.c  nshader_type_internal.h  nshader_writer.c
tests/: README.md  nshader_base_tests.c  nshader_base_tests.cpp  nshader_base_tests.h  nshader_compiler_tests.c  nshader_compiler_tests.cpp  nshader_compiler_tests.h  nshader_info_tests.c  nshader_info_tests.cpp  nshader_info_tests.h  nshader_reader_tests.c  nshader_reader_tests.cpp  nshader_reader_tests.h  nshader_samples_tests.c  nshader_samples_tests.cpp  nshader_samples_tests.h  nshader_tests.c  nshader_type_tests.c  nshader_type_tests.cpp  nshader_type_tests.h  nshader_writer_tests.c  nshader_writer_tests.cpp  nshader_writer_tests.h  test_main.c  test_main.cpp  test_shaders.h
